added user ban feature for admin
